# VtuberAppOpenGL

./: .gitattributes  .gitignore  CMakeLists.txt  build.bat  build.sh  readme.md
assets/shaders/: default.frag  default.vert
include/imgui/: imgui.h  imgui_impl_glfw.h  imgui_impl_opengl3.h  imgui_internal.h
src/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  PMXFile.cpp  PMXFile.h  PMXModel.cpp  PMXModel.h  RayCaster.cpp  RayCaster.h  Texture.cpp  Texture.h  main.cpp
src/commands/: CommandManager.cpp
src/imgui/: imgui.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  imgui_widgets.cpp
